--- a/letsmeat.html
+++ b/letsmeat.html
@@ -20,6 +20,7 @@
 	left:0;right:0;
 	top:0;bottom:0;
   }
+	background-color: #000000;
 </style>
 <script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
 <script>
